added API config, order delete interaction, custom exceptions; refactoring